--- a/src/variables/spacing/spacing-trimmed.css
+++ b/src/variables/spacing/spacing-trimmed.css
@@ -3,24 +3,43 @@
  */
 
 :root {
-  --spacing-0: 0px;
-  --spacing-1: 4px;
-  --spacing-2: 8px;
-  --spacing-3: 12px;
-  --spacing-4: 16px;
-  --spacing-5: 20px;
-  --spacing-6: 24px;
-  --spacing-7: 28px;
-  --spacing-8: 32px;
-  --spacing-9: 36px;
-  --spacing-10: 40px;
-  --spacing-11: 44px;
-  --spacing-12: 48px;
-  --spacing-14: 56px;
-  --spacing-16: 64px;
-  --spacing-px: 1px;
-  --spacing-0-5: 2px;
-  --spacing-1-5: 6px;
-  --spacing-2-5: 10px;
-  --spacing-3-5: 14px;
+  --spacing-pos-0: 0px;
+  --spacing-pos-1: 4px;
+  --spacing-pos-2: 8px;
+  --spacing-pos-3: 12px;
+  --spacing-pos-4: 16px;
+  --spacing-pos-5: 20px;
+  --spacing-pos-6: 24px;
+  --spacing-pos-7: 28px;
+  --spacing-pos-8: 32px;
+  --spacing-pos-9: 36px;
+  --spacing-pos-10: 40px;
+  --spacing-pos-11: 44px;
+  --spacing-pos-12: 48px;
+  --spacing-pos-14: 56px;
+  --spacing-pos-16: 64px;
+  --spacing-pos-px: 1px;
+  --spacing-pos-0-5: 2px;
+  --spacing-pos-1-5: 6px;
+  --spacing-pos-2-5: 10px;
+  --spacing-pos-3-5: 14px;
+  --spacing-neg-px: -1px;
+  --spacing-neg-0-5: -2px;
+  --spacing-neg-1: -4px;
+  --spacing-neg-1-5: -6px;
+  --spacing-neg-2: -8px;
+  --spacing-neg-2-5: -10px;
+  --spacing-neg-3: -12px;
+  --spacing-neg-3-5: -14px;
+  --spacing-neg-4: -16px;
+  --spacing-neg-5: -20px;
+  --spacing-neg-6: -24px;
+  --spacing-neg-7: -28px;
+  --spacing-neg-8: -32px;
+  --spacing-neg-9: -36px;
+  --spacing-neg-10: -40px;
+  --spacing-neg-11: -44px;
+  --spacing-neg-12: -48px;
+  --spacing-neg-14: -56px;
+  --spacing-neg-16: -64px;
 }
