--- a/src/variables/spacing/selectable-ratio-squared-verbose.css
+++ b/src/variables/spacing/selectable-ratio-squared-verbose.css
@@ -3,10 +3,10 @@
  */
 
 [data-ratio="squared"] {
-  --spacing-inline-xs: var(--spacing-2);
-  --spacing-inline-sm: var(--spacing-3);
-  --spacing-inline-md: var(--spacing-4);
-  --spacing-stack-xs: var(--spacing-2);
-  --spacing-stack-sm: var(--spacing-3);
-  --spacing-stack-md: var(--spacing-4);
+  --spacing-inline-xs: var(--spacing-pos-2);
+  --spacing-inline-sm: var(--spacing-pos-3);
+  --spacing-inline-md: var(--spacing-pos-4);
+  --spacing-stack-xs: var(--spacing-pos-2);
+  --spacing-stack-sm: var(--spacing-pos-3);
+  --spacing-stack-md: var(--spacing-pos-4);
 }
