--- a/src/variables/spacing/selectable-ratio-squished-verbose.css
+++ b/src/variables/spacing/selectable-ratio-squished-verbose.css
@@ -3,10 +3,10 @@
  */
 
 :root, [data-ratio="squished"] {
-  --spacing-inline-xs: var(--spacing-2);
-  --spacing-inline-sm: var(--spacing-3);
-  --spacing-inline-md: var(--spacing-4);
-  --spacing-stack-xs: var(--spacing-1-5);
-  --spacing-stack-sm: var(--spacing-2);
-  --spacing-stack-md: var(--spacing-3);
+  --spacing-inline-xs: var(--spacing-pos-2);
+  --spacing-inline-sm: var(--spacing-pos-3);
+  --spacing-inline-md: var(--spacing-pos-4);
+  --spacing-stack-xs: var(--spacing-pos-1-5);
+  --spacing-stack-sm: var(--spacing-pos-2);
+  --spacing-stack-md: var(--spacing-pos-3);
 }
