--- a/www/variables/_index.css
+++ b/www/variables/_index.css
@@ -1,3 +1,4 @@
+@import '_color-scheme.css';
 @import 'color/matrix-neutral-trimmed.css';
 @import 'color/matrix-accent-trimmed.css';
 @import 'color/matrix-success-trimmed.css';
