--- a/www/variables/index.css
+++ b/www/variables/index.css
@@ -1,4 +1,14 @@
-:root, [data-color-appearance="neutral"] {
+:root,
+.light {
+  color-scheme: light;
+}
+
+.dark {
+  color-scheme: dark;
+}
+
+:root,
+[data-color-appearance='neutral'] {
   --background-app: light-dark(#fff, #181a1c);
   --background-subtle: light-dark(#f3f3f3, #202325);
   --surface-element: light-dark(#e1e1e1, #2a3033);
@@ -14,7 +24,7 @@
   --text-high-contrast: light-dark(#1e1e1e, #eaeef1);
 }
 
-[data-color-appearance="accent"] {
+[data-color-appearance='accent'] {
   --background-app: light-dark(#fff, #131c1d);
   --background-subtle: light-dark(#e8f7f8, #172527);
   --surface-element: light-dark(#cfe7e9, #1d3335);
@@ -30,7 +40,7 @@
   --text-high-contrast: light-dark(#152122, #e0f1f3);
 }
 
-[data-color-appearance="success"] {
+[data-color-appearance='success'] {
   --background-app: light-dark(#fff, #131d12);
   --background-subtle: light-dark(#e8f9e6, #172716);
   --surface-element: light-dark(#cfeacc, #1d361c);
@@ -46,7 +56,7 @@
   --text-high-contrast: light-dark(#152215, #e0f4de);
 }
 
-[data-color-appearance="info"] {
+[data-color-appearance='info'] {
   --background-app: light-dark(#fff, #111c23);
   --background-subtle: light-dark(#e5f6ff, #152430);
   --surface-element: light-dark(#cae6fa, #183243);
@@ -62,7 +72,7 @@
   --text-high-contrast: light-dark(#13202a, #dcf1ff);
 }
 
-[data-color-appearance="warning"] {
+[data-color-appearance='warning'] {
   --background-app: light-dark(#fff, #23170d);
   --background-subtle: light-dark(#ffefdf, #2f1e10);
   --surface-element: light-dark(#fbdac1, #432710);
@@ -78,7 +88,7 @@
   --text-high-contrast: light-dark(#2a1b0f, #ffe8d6);
 }
 
-[data-color-appearance="danger"] {
+[data-color-appearance='danger'] {
   --background-app: light-dark(#fff, #291312);
   --background-subtle: light-dark(#ffeae8, #371717);
   --surface-element: light-dark(#ffd0ce, #4f1c1d);
@@ -144,7 +154,8 @@
   --spacing-neg-16: -64px;
 }
 
-:root, [data-ratio="squished"] {
+:root,
+[data-ratio='squished'] {
   --spacing-inline-xs: var(--spacing-pos-2);
   --spacing-inline-sm: var(--spacing-pos-3);
   --spacing-inline-md: var(--spacing-pos-4);
@@ -153,7 +164,7 @@
   --spacing-stack-md: var(--spacing-pos-3);
 }
 
-[data-ratio="squared"] {
+[data-ratio='squared'] {
   --spacing-inline-xs: var(--spacing-pos-2);
   --spacing-inline-sm: var(--spacing-pos-3);
   --spacing-inline-md: var(--spacing-pos-4);
@@ -162,7 +173,7 @@
   --spacing-stack-md: var(--spacing-pos-4);
 }
 
-[data-ratio="stretched"] {
+[data-ratio='stretched'] {
   --spacing-inline-xs: var(--spacing-pos-2);
   --spacing-inline-sm: var(--spacing-pos-3);
   --spacing-inline-md: var(--spacing-pos-4);
@@ -171,33 +182,34 @@
   --spacing-stack-md: var(--spacing-pos-5);
 }
 
-:root, [data-padding="xs"] {
+:root,
+[data-padding='xs'] {
   --selectable-padding-inline: var(--spacing-inline-xs);
   --selectable-padding-stack: var(--spacing-stack-xs);
 }
 
-[data-padding="sm"] {
+[data-padding='sm'] {
   --selectable-padding-inline: var(--spacing-inline-sm);
   --selectable-padding-stack: var(--spacing-stack-sm);
 }
 
-[data-padding="md"] {
+[data-padding='md'] {
   --selectable-padding-inline: var(--spacing-inline-md);
   --selectable-padding-stack: var(--spacing-stack-md);
 }
 
 :root {
-  --typography-xs-font-size: .656rem;
+  --typography-xs-font-size: 0.656rem;
   --typography-xs-font-weight-regular: 400;
   --typography-xs-font-weight-bold: 700;
   --typography-xs-line-height-normal: 16;
   --typography-xs-line-height-squished: 12;
-  --typography-sm-font-size: .75rem;
+  --typography-sm-font-size: 0.75rem;
   --typography-sm-font-weight-regular: 400;
   --typography-sm-font-weight-bold: 700;
   --typography-sm-line-height-normal: 16;
   --typography-sm-line-height-squished: 12;
-  --typography-md-font-size: .875rem;
+  --typography-md-font-size: 0.875rem;
   --typography-md-font-weight-regular: 400;
   --typography-md-font-weight-bold: 700;
   --typography-md-line-height-normal: 20;
@@ -209,7 +221,8 @@
   --typography-lg-line-height-squished: 20;
 }
 
-:root, [data-font-size="xs"] {
+:root,
+[data-font-size='xs'] {
   --font-size: var(--typography-xs-font-size);
   --font-weight-regular: var(--typography-xs-font-weight-regular);
   --font-weight-bold: var(--typography-xs-font-weight-bold);
@@ -217,7 +230,7 @@
   --line-height-squished: var(--typography-xs-line-height-squished);
 }
 
-[data-font-size="sm"] {
+[data-font-size='sm'] {
   --font-size: var(--typography-sm-font-size);
   --font-weight-regular: var(--typography-sm-font-weight-regular);
   --font-weight-bold: var(--typography-sm-font-weight-bold);
@@ -225,7 +238,7 @@
   --line-height-squished: var(--typography-sm-line-height-squished);
 }
 
-[data-font-size="md"] {
+[data-font-size='md'] {
   --font-size: var(--typography-md-font-size);
   --font-weight-regular: var(--typography-md-font-weight-regular);
   --font-weight-bold: var(--typography-md-font-weight-bold);
@@ -233,7 +246,7 @@
   --line-height-squished: var(--typography-md-line-height-squished);
 }
 
-[data-font-size="lg"] {
+[data-font-size='lg'] {
   --font-size: var(--typography-lg-font-size);
   --font-weight-regular: var(--typography-lg-font-weight-regular);
   --font-weight-bold: var(--typography-lg-font-weight-bold);
@@ -241,18 +254,20 @@
   --line-height-squished: var(--typography-lg-line-height-squished);
 }
 
-:root, [data-font-weight="regular"] {
+:root,
+[data-font-weight='regular'] {
   --font-weight: var(--font-weight-regular);
 }
 
-[data-font-weight="bold"] {
+[data-font-weight='bold'] {
   --font-weight: var(--font-weight-bold);
 }
 
-:root, [data-line-height="normal"] {
+:root,
+[data-line-height='normal'] {
   --line-height: var(--line-height-normal);
 }
 
-[data-line-height="squished"] {
+[data-line-height='squished'] {
   --line-height: var(--line-height-squished);
 }
